--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "TypeParams"
 uuid = "aef91bff-20f9-45ec-bc27-6bc16f693c59"
 authors = ["Simon Etter <simon0etter@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1"
